--- a/css/friend.css
+++ b/css/friend.css
@@ -11,8 +11,8 @@
 }
 
 .friend__avatar.g-avatar {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
 }
 
 .friend__avatar.m-avatar {
@@ -31,6 +31,7 @@
 
 .friend__content .friend__name {
   display: block;
+  /*font-weight: 600;*/
   margin-bottom: 5px;
 }
 
@@ -47,4 +48,28 @@
 .friend__content .friend__status,
 .friend .chat__timestamp {
   font-size: 12px;
+}
+
+.friend .friend__now-listening {
+  padding: 5px 10px;
+  border-radius: 15px;
+  border: 1px solid #52e084;
+  font-size: 14px;
+}
+
+.friend__now-listening span {
+  opacity: 0.6;
+}
+
+.friend__now-listening i {
+  font-size: 12px;
+}
+
+.friend__add-btn {
+  display: flex;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 5px;
 }
