--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,16 @@
+.header-wrapper {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  padding: 5px 0px;
+  background-color: white;
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .chats-body {
-  padding: 0;
+  padding: 10px 0px;
+  padding-top: 100px;
 }
 
 .chats-body .header,
@@ -7,29 +18,73 @@
   padding: 0px 20px;
 }
 
-.chat-screen {
+.chats-body {
   background-image: url("../images/chatBg.png");
-  min-height: 100vh;
+  min-height: 300vh;
 }
 
-.chat__write {
+.chat__write--container {
   position: fixed;
-  bottom: 50px;
-  width: 80%;
-  height: 40px;
-  margin: 0 auto;
+  bottom: 0px;
   left: 0;
   right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fcfcfc;
-  padding: 0px 20px;
-  border-radius: 40px;
-  border: 1px solid black;
-  opacity: 0.7;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.7),
+  width: 100%;
+  /*opacity: 0.7;*/
+  /*box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.7),
     0 18px 36px -18px rgba(0, 0, 0, 0.5), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+*/
+}
+
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.1s ease-in-out;
+}
+
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__write {
+  margin: 0px auto;
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
+  width: 100%;
+  height: 15px;
+  border: none;
+  font-size: 14px;
+  /*transition: border-radius 1s ease-in-out;*/
+  /*transition: width 0.5s ease-in;*/
+  /*transition: all 0.5s ease-in;*/
+  transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out,
+    border-radius 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.chat__write:focus {
+  outline: none;
+  width: 80%;
+  /*margin: 0 auto;*/
+  border-radius: 40px;
+  /*transform: scaleX(0.7);*/
+  /*transform: translateY(-100px);*/
+  transform: translateY(-65px);
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
+.chat__write:focus ~ .chat__icon {
+  /*display: none;*/
+  opacity: 0;
 }
 
 .chat__write i {
@@ -40,13 +95,9 @@
   width: 80%;
 }
 
-.chat__write-column input {
-  padding: 10px;
-  width: 100%;
-  height: 25px;
-  border: none;
-  font-size: 14px;
+/*.chat__write-column input {
 }
+*/
 
 .chat-screen .chat__messages {
   border-top: 1px solid #f7f7f7;
