--- a/css/chat.css
+++ b/css/chat.css
@@ -6,11 +6,13 @@
   background-color: white;
   box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
     0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  z-index: 2;
 }
 
 .chats-body {
   padding: 10px 0px;
   padding-top: 100px;
+  z-index: 1;
 }
 
 .chats-body .header,
@@ -53,33 +55,52 @@
   right: 10px;
 }
 
+@keyframes float {
+  0% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  50% {
+    box-shadow: 0 30px 60px -60px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+}
+
 .chat__write {
-  margin: 0px auto;
+  margin: 0 auto;
   bottom: 0px;
   width: 100%;
+  height: 14px;
   border-radius: 0;
   padding: 20px 60px;
   width: 100%;
-  height: 15px;
   border: none;
   font-size: 14px;
+  transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out,
+    border-radius 0.5s ease-in-out, transform 0.5s ease-in-out;
   /*transition: border-radius 1s ease-in-out;*/
   /*transition: width 0.5s ease-in;*/
   /*transition: all 0.5s ease-in;*/
-  transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out,
-    border-radius 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
 .chat__write:focus {
   outline: none;
   width: 80%;
-  /*margin: 0 auto;*/
+  transform: translateY(-100px);
   border-radius: 40px;
-  /*transform: scaleX(0.7);*/
-  /*transform: translateY(-100px);*/
-  transform: translateY(-65px);
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  /*box-shadow: 5px 5px #ccc;*/
+  animation: float 3s linear infinite forwards;
+  /*transform: scaleX(0.7);*/
+  /*transform: translateY(-100px);*/
 }
 
 .chat__write:focus ~ .chat__icon {
@@ -95,13 +116,8 @@
   width: 80%;
 }
 
-/*.chat__write-column input {
-}
-*/
-
 .chat-screen .chat__messages {
   border-top: 1px solid #f7f7f7;
-  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,8 +156,20 @@
   display: block;
 }
 
+@keyframes incomingAnim {
+  from {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .incoming-message {
   align-self: flex-start;
+  animation: incomingAnim 0.5s ease-out forwards;
 }
 
 .incoming-message img {
@@ -163,8 +191,20 @@
   background-image: linear-gradient(to right, #7b4397, #dc2430);
 }
 
+@keyframes sentAnimation {
+  from {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .sent-message {
   align-self: flex-end;
+  animation: sentAnimation 0.5s ease-out forwards;
 }
 
 .sent-message .message__bubble {
