--- a/css/chat.css
+++ b/css/chat.css
@@ -167,6 +167,15 @@
   }
 }
 
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+}
+
 .incoming-message {
   align-self: flex-start;
   animation: incomingAnim 0.5s ease-out forwards;
@@ -177,6 +186,10 @@
   height: 30px;
   border-radius: 15px;
   margin-right: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  animation: spin 1s linear infinite;
 }
 
 .incoming-message .message__author {
