--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,3 +1,18 @@
+@keyframes showNavBar {
+  from {
+    transform: translateY(80px);
+  }
+  to {
+    transform: none;
+  }
+}
+
+.nav {
+  transform: translateY(80px);
+  animation: showNavBar 0.5s ease-out forwards;
+  animation-delay: 0.5s;
+}
+
 .nav {
   position: fixed;
   width: 100%;
